syntax = "proto3";
option go_package = "github.com/kubecc-io/kubecc/pkg/metrics";
import "pkg/types/types.proto";
import "google/protobuf/any.proto";

package metrics;

message TaskStatus {
  int32 NumRunning = 1;
  int32 NumQueued = 2;
  int32 NumDelegated = 3;
}

message Toolchains {
  repeated types.Toolchain Items = 1;
}

message UsageLimits {
  int32 ConcurrentProcessLimit = 1;
  int32 DelegatedTaskLimit = 2;
}

message AgentInfo {
  string Node = 4;
  string Pod = 5;
  string Namespace = 6;
}

message Deleter {
  string Key = 1;
}

message CpuStats {
  uint64 WallTime = 1;
  CpuUsage CpuUsage = 2;
  ThrottlingData ThrottlingData = 3;
}

message CpuUsage {
  int64 CfsQuota = 1;
  int64 CfsPeriod = 2;
  uint64 TotalUsage = 3;
}

// libcontainer/cgroups/stats.go ThrottlingData
message ThrottlingData {
  uint64 Periods = 1;
  uint64 ThrottledPeriods = 2;
  uint64 ThrottledTime = 3;
}

// Scheduler

message TasksCompletedTotal {
  int64 Total = 1;
}

message TasksFailedTotal {
  int64 Total = 1;
}

message SchedulingRequestsTotal {
  int64 Total = 1;
}

message AgentCount {
  int64 Count = 1;
}

message ConsumerdCount {
  int64 Count = 1;
}

message Identifier {
  string UUID = 1;
}

message AgentTasksTotal {
  string UUID = 1;
  int64 Total = 2;
}

message ConsumerdTasksTotal {
  string UUID = 1;
  int64 Total = 2;
}

message PreferredUsageLimits {
  int64 ConcurrentProcessLimit = 1;
}

// Monitor

message MetricsPostedTotal {
  int64 Total = 1;
}

message ListenerCount {
  int32 Count = 1;
}

message ProviderCount {
  int32 Count = 1;
}

message ProviderInfo {
  string UUID = 1;
  types.Component Component = 2;
  string Address = 3;
}

message Providers {
  map<string, ProviderInfo> Items = 1;
}

message BucketSpec {
  string Name = 1;
  map<string, google.protobuf.Any> Data = 2;
}

// Consumerd

message LocalTasksCompleted {
  int64 Total = 1;
}

message DelegatedTasksCompleted {
  int64 Total = 1;
}

// Cache Server

message CacheUsage {
  int64 ObjectCount = 1;
  int64 TotalSize = 2;
  double UsagePercent = 3;
}

message CacheHits {
  int64 CacheHitsTotal = 1;
  int64 CacheMissesTotal = 2;
  double CacheHitPercent = 3;
}

enum OverallStatus {
  UnknownStatus = 0;
  Ready = 1;
  Initializing = 2;
  Degraded = 3;
  Unavailable = 4;
}

enum StatusConditions {
  NoConditions = 0;
  Pending = 1;
  MissingOptionalComponent = 2;
  MissingCriticalComponent = 3;
  InvalidConfiguration = 4;
  InternalError = 5;
}

message Health {
  OverallStatus Status = 1;
  repeated string Messages = 3;
}